--- a/RabitMQProductAPI/appsettings.json
+++ b/RabitMQProductAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LAPTOP-UF683IFB\\SQLEXPRESS2019;Initial Catalog=RabitMQDemo;User Id=sa;Password=dewa@123;Trusted_Connection=SSPI;Encrypt=false;TrustServerCertificate=true"
+  }
 }
